# oneproof

./: .gitattributes  .gitignore  .gitmodules  PRODUCT.md  README.md  VIDEO.md  build.md  design.md  implement.md
.github/workflows/: test.yml
backend/: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  fly.toml  generate-companions.mjs  package-lock.json  package.json  prepare.sh  tsconfig.json  vitest.config.ts
backend/src/: prover.test.ts  prover.ts  server.ts
bench/: k16-projection.json  package-lock.json  package.json  results.json  runBench.ts
bench/scripts/: deploy-and-smoke.sh  deploy-oneproof.sh  run-bench.sh
bench/src/: snarkjs-to-soroban.ts
circuits/_tier0_spike/: README.md  build.sh
circuits/aggregator/: Nargo.toml  Prover.toml  build.sh
circuits/aggregator_k16/: Nargo.toml
circuits/derive_inputs/: Nargo.toml
circuits/groth16_batch/: README.md  build.sh  circuit.circom  generate-input.ts  input.json  package-lock.json  package.json  vkey.json
contracts/groth16_batch_verifier/: Cargo.toml  README.md
contracts/groth16_batch_verifier/src/: lib.rs  test.rs  transcript.rs  types.rs  verify.rs
contracts/groth16_batch_verifier/test_snapshots/test/: double_initialize_panics.1.json  vk_round_trips.1.json
contracts/oneproof_verifier/: Cargo.toml
contracts/oneproof_verifier/src/: lib.rs
evm/: .gitignore  README.md  foundry.toml
evm/src/: Verifier.sol
prover/: package.json
scripts/: bench.sh  build.sh  deploy.sh  dev-restart.sh  dev.sh  normalize-vendor-lf.sh  preview.sh  prove.sh
web/: .gitignore  HERO_SCENE.md  README.md  SPLINE_BRIEF.md  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
(+53 files in other folders)
