[package]
name = "groth16_batch_verifier"
version = "0.1.0"
edition = "2021"
publish = false
# implement.md §3.2 — batched Groth16 verifier on BN254 + MSM.

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { version = "26.0.1", default-features = false }

[dev-dependencies]
soroban-sdk = { version = "26.0.1", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
